# RedThread

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  DEMO.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
src/: config.py  main.py  seed.py
src/api/: analysis.py  entities.py  export.py  ingestion.py  investigations.py  nlquery.py  relationships.py  snapshots.py  temporal.py
src/database/: falkordb_client.py  schema.py  sqlite_client.py
src/graph/: analytics.py  cypher_utils.py  diff.py  nlq.py  pathfinding.py  patterns.py  queries.py  risk_scoring.py  temporal.py  validation.py
src/ingestion/: csv_importer.py  entity_resolver.py  json_importer.py  validators.py
src/models/: cases.py  entities.py  relationships.py
src/static/: index.html
tests/: conftest.py
tests/e2e/: test_workflows.py
tests/integration/: test_analysis_api.py  test_api.py  test_entity_relationship_snapshot_api.py  test_export_nlq.py  test_graph_operations.py  test_import_validation.py  test_investigations_api.py  test_temporal_api.py
tests/performance/: test_query_performance.py
tests/unit/: test_advanced_features.py  test_analytics.py  test_api_query_limits.py  test_community_detection.py  test_csv_export.py  test_csv_importer.py  test_cypher_injection.py  test_diff.py  test_entities.py  test_entity_resolver.py  test_error_handlers.py  test_falkordb_client.py  test_input_validation.py  test_json_importer.py  test_nlq.py  (+7 more)
(+4 files in other folders)
